--- a/css/scss/_variables.scss
+++ b/css/scss/_variables.scss
@@ -1,4 +1,5 @@
-$colorPanel1: red;
-$colorPanel2: green;
-$colorPanel3: blue;
-$multiplier: 50;
+$imgGrid: '../../img/grid.jpg';
+$imgPoly: '../../img/poly-portrait.jpg';
+$imgMono: '../../img/mono-portrait.jpg';
+$imgMonoBlack: '../../img/mono-black-portrait.jpg';
+$imgObstacle: '../../img/obstacle.jpg';
