--- a/css/scss/_variables.scss
+++ b/css/scss/_variables.scss
@@ -3,3 +3,4 @@ $imgPoly: '../../img/poly-portrait.jpg';
 $imgMono: '../../img/mono-portrait.jpg';
 $imgMonoBlack: '../../img/mono-black-portrait.jpg';
 $imgObstacle: '../../img/obstacle.jpg';
+$overlayColor: rgba(234, 227, 63, 0.5);
