BIT-297: Add handle widths.

--- a/css/scss/_variables.scss
+++ b/css/scss/_variables.scss
@@ -4,3 +4,4 @@ $imgMono: '../../img/mono-portrait.jpg';
 $imgMonoBlack: '../../img/mono-black-portrait.jpg';
 $imgObstacle: '../../img/obstacle.jpg';
 $overlayColor: rgba(234, 227, 63, 0.5);
+$lineColor: rgba(234, 227, 63, 1.0);
