--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -49,14 +49,14 @@ h2 {
 
 .solar-panel {
   width: 50px;
-  height: 82px;
+  height: 80px;
   &.obstacle {
     width: 50px;
     height: 50px;
   }
   p {
     color: #fff;
-    font-size: 10px;
+    font-size: 8px;
     text-align: center;
     line-height: 12px;
     margin: 5px 0;
@@ -71,35 +71,82 @@ h2 {
   }
 }
 
-.style-1 {
-  background-image: url($imgPoly);
-  &.ui-selected {
-    background-image: linear-gradient($overlayColor, $overlayColor),
-    url($imgPoly)
+.solar-panel.landscape {
+  width: 80px;
+  height: 50px;
+  position: relative;
+  &.obstacle {
+    width: 50px;
+    height: 50px;
+  }
+  p {
+    text-align: left;
+    margin: 0 0 0 5px;
+    &:first-of-type {
+      margin-top: 5px;
+    }
+    &.option {
+      margin-top: 0;
+    }
+    &.option span {
+      position: absolute;
+      right: 5px;
+      top: 5px;
+    }
   }
 }
 
-.style-2 {
-  background-image: url($imgMono);
-  &.ui-selected {
-    background-image: linear-gradient($overlayColor, $overlayColor),
-    url($imgMono)
-  }
+.solar-panel.ui-selected {
+    position: relative;
+    &:before{
+      position: absolute;
+      content:" ";
+      top:0;
+      left:0;
+      width:100%;
+      height:100%;
+      display: block;
+      z-index:0;
+      background-image: linear-gradient($overlayColor, $overlayColor),
+    }
 }
 
-.style-3 {
-  background-image: url($imgMonoBlack);
-  &.ui-selected {
-    background-image: linear-gradient($overlayColor, $overlayColor),
-    url($imgMonoBlack)
+.line {
+  color: #000;
+  font-size: 8px;
+  font-weight: bold;
+  height: 10px;
+  line-height: 10px;
+  text-align: center;
+  position: absolute;
+  background: $lineColor;
+  &:after {
+    left: 100%;
+    top: 50%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+    border-color: rgba(0, 128, 0, 0);
+    border-left-color: $lineColor;
+    border-width: 10px;
+    margin-top: -10px;
   }
-}
-
-.obstacle-1 {
-  background-image: url($imgObstacle);
-  &.ui-selected {
-    background-image: linear-gradient($overlayColor, $overlayColor),
-    url($imgObstacle)
+  &:before {
+    right: 100%;
+    top: 50%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+    border-color: rgba(0, 128, 0, 0);
+    border-right-color: $lineColor;
+    border-width: 10px;
+    margin-top: -10px;
   }
 }
 
