--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -45,6 +45,13 @@ h2 {
       }
     }
   }
+
+  .form-check {
+    margin: 10px 0 0 10px;
+    .form-check-label {
+      font-size: 12px;
+    }
+  }
 }
 
 .solar-panel {
@@ -71,6 +78,34 @@ h2 {
   }
 }
 
+.sketch {
+  .solar-panel.portrait {
+    > p:first-of-type {
+      margin: 15px 0 0 0;
+    }
+    p {
+      margin: 0 0 3px 0;
+    }
+  }
+
+  .solar-panel.landscape {
+    > p:first-of-type {
+      margin: 15px 0 0 10px;
+    }
+    p {
+      margin: 0 0 3px 10px;
+      &.option {
+        margin-top: 0;
+      }
+      &.option span {
+        position: absolute;
+        right: 5px;
+        top: 15px;
+      }
+    }
+  }
+}
+
 .solar-panel.landscape {
   width: 80px;
   height: 50px;
@@ -84,14 +119,6 @@ h2 {
     margin: 0 0 0 5px;
     &:first-of-type {
       margin-top: 5px;
-    }
-    &.option {
-      margin-top: 0;
-    }
-    &.option span {
-      position: absolute;
-      right: 5px;
-      top: 5px;
     }
   }
 }
@@ -113,10 +140,10 @@ h2 {
 
 .line {
   color: #000;
-  font-size: 8px;
+  font-size: 7px;
   font-weight: bold;
-  height: 10px;
-  line-height: 10px;
+  height: 8px;
+  line-height: 8px;
   text-align: center;
   position: absolute;
   background: $lineColor;
@@ -131,8 +158,8 @@ h2 {
     pointer-events: none;
     border-color: rgba(0, 128, 0, 0);
     border-left-color: $lineColor;
-    border-width: 10px;
-    margin-top: -10px;
+    border-width: 8px;
+    margin-top: -8px;
   }
   &:before {
     right: 100%;
@@ -145,8 +172,29 @@ h2 {
     pointer-events: none;
     border-color: rgba(0, 128, 0, 0);
     border-right-color: $lineColor;
-    border-width: 10px;
-    margin-top: -10px;
+    border-width: 8px;
+    margin-top: -8px;
+  }
+
+  &.vertical {
+    background: yellow;
+    &:after {
+      display: none;
+    }
+    &:before {
+      right: 100%;
+      top: 50%;
+      border: solid transparent;
+      content: " ";
+      height: 0;
+      width: 0;
+      position: absolute;
+      pointer-events: none;
+      border-color: rgba(0, 128, 0, 0);
+      border-right-color: red;
+      border-width: 8px;
+      margin-top: -8px;
+    }
   }
 }
 
