--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -177,13 +177,9 @@ h2 {
   }
 
   &.vertical {
-    background: yellow;
     &:after {
-      display: none;
-    }
-    &:before {
-      right: 100%;
-      top: 50%;
+      left: -50%;
+      top: 100%;
       border: solid transparent;
       content: " ";
       height: 0;
@@ -191,9 +187,23 @@ h2 {
       position: absolute;
       pointer-events: none;
       border-color: rgba(0, 128, 0, 0);
-      border-right-color: red;
+      border-top-color: $lineColor;
       border-width: 8px;
-      margin-top: -8px;
+      margin-top: -3px;
+    }
+    &:before {
+      right: -50%;
+      top: 0;
+      border: solid transparent;
+      content: " ";
+      height: 0;
+      width: 0;
+      position: absolute;
+      pointer-events: none;
+      border-color: rgba(0, 128, 0, 0);
+      border-bottom-color: $lineColor;
+      border-width: 8px;
+      margin-top: -12px;
     }
   }
 }
